# reginald_bot

./: .gitignore  Cargo.toml  Dockerfile  config.toml  pm2.config.js  readme.md  todo.md
.github/workflows/: docker-image.yml
config/: pm2.config.js
src/: config.rs  main.rs
