[package]
name = "reginald_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
serde = "1.0.145"
serde_derive = "1.0.145"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio  = { version = "1.0", features = ["macros", "rt-multi-thread"] }
toml = "0.5.9"
